samples/_failures_safe/1761318397_33761f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4295f020.c: In function ‘main’:
./samples/SAFE/__tmp_4295f020.c:163:16: error: missing terminating " character
  163 |         printf("Failed to create matrix
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4295f020.c:163:9: error: expected expression at end of input
  163 |         printf("Failed to create matrix
      |         ^~~~~~
./samples/SAFE/__tmp_4295f020.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4295f020.c:163:9: error: expected declaration or statement at end of input
